LPS-107659 - Fix portlet topper visibility

--- a/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/portlet/_topper.scss
+++ b/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/portlet/_topper.scss
@@ -1,18 +1,3 @@
-%display-portlet-topper {
-	@include media-breakpoint-up(sm) {
-		opacity: 1;
-		transform: translateY(-97%);
-	}
-}
-
-%display-portlet-content-editable {
-	@include media-breakpoint-up(sm) {
-		border-color: $portlet-topper-border;
-		border-top-left-radius: 0;
-		border-top-right-radius: 0;
-	}
-}
-
 .portlet {
 	margin-bottom: 10px;
 	position: relative;
@@ -24,7 +9,7 @@
 	> .portlet-topper {
 		display: none;
 
-		@include media-breakpoint-up(sm) {
+		@include media-breakpoint-up(md) {
 			display: flex;
 			left: 0;
 			opacity: 0;
@@ -36,28 +21,26 @@
 			top: 0;
 		}
 	}
-
-	&.open {
-		> .portlet-content-editable {
-			@extend %display-portlet-content-editable;
-		}
-
-		> .portlet-topper {
-			@extend %display-portlet-topper;
-		}
-	}
 }
 
 .controls-visible {
 	.portlet {
 		&:hover,
+		&.open,
 		&.focus {
 			> .portlet-content-editable {
-				@extend %display-portlet-content-editable;
+				@include media-breakpoint-up(md) {
+					border-color: $portlet-topper-border;
+					border-top-left-radius: 0;
+					border-top-right-radius: 0;
+				}
 			}
 
 			> .portlet-topper {
-				@extend %display-portlet-topper;
+				@include media-breakpoint-up(md) {
+					opacity: 1;
+					transform: translateY(-97%);
+				}
 			}
 		}
 	}
